<resources>
    <string name="app_name">Akhtung!</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Vayter</string>
    <string name="previous">Tzurik</string>

    <string name="name_dialog_title">Bite ingebt zayer nomen</string>
    <string name="name">Gantze nomen</string>
    <string name="no_name">Bite ingebt a nomen</string>
    <string name="manual_input">Ingebt a numer manuel</string>
    <string name="confirm_alert">Shikt onzog?</string>
    <string name="add_message">Leygt onzog</string>
    <string name="message_hint">Leygt onzog…</string>
    <string name="describe_QR">QR kod far an andere nitznik tzu farbindn ir mit</string>
    <string name="invalid_id">Ir hot nisht ingegebn a gut numer</string>
    <string name="no_id">Bite ingebt oder skant a QR ID</string>
    <string name="scan_new">Bite skant a naye kod</string>
    <string name="no_camera">Nisht keyn fotoaparat detektirn</string>
    <string name="alert_sent">Onzog hatzlochedik geshikt</string>
    <string name="general_error">Grayz: Onzog ken nisht shikn</string>
    <string name="user_registered">Zayer registratziye iz gut!</string>
    <string name="default_message">%s veln zayer ufmerkzamkayt!</string>
    <string name="message_prefix">%s zogt: %s</string>

    <string name="confirm_delete_title">Oysmekn chaver</string>
    <string name="confirm_delete_message">Zent ir zikher vos ir veln tzu oysmekn %s fun zayer chaverim?</string>
    <string name="yes">Ya</string>

    <string name="delete">Oysmekn</string>
    <string name="rename">Redagirn nomen</string>
    <string name="new_name">Ingebn naye nomen</string>


    <string name="permissions_needed">Reshuth darfn far tzu skan</string>
    <string name="permission_details">Gebt fotoaparat reshuth far tzu skan zayer khaver\'s QR kod. Ir kent oykh ingebn zayer ID manuel, vayl ir veln</string>
    <string name="channel_name">Onzogn ir hot nisht gezen</string>
    <string name="channel_description">Onzogn ir ven ir hot nisht gezen an onzog</string>
    <string name="notification_title">Nisht-gezen onzog fun %s</string>
    <string name="alert_notification_title">Onzog fun %s</string>
    <string name="alert_channel_name">Onzogen</string>
    <string name="alert_channel_description">Onzogn ir af naye onzogn</string>


    <string name="allow">Lozn</string>
    <string name="deny">Leykenen</string>
    <string name="draw_title">Vayzn iberlign</string>
    <string name="draw_message">Lozn Akhtung! tzu vayzn iberlign? Das lozn vayzning fun onzogn ven zayer aparat iz geveynt</string>
    <string name="open_settings">Efn settings</string>
    <string name="do_not_ask_again">Zogt nisht keyn mol mer</string>

    <string name="msg_token_fmt" translatable="false">Generated token: %s</string>
    <string name="log_msg_sent" translatable="false">Message %s successfully sent</string>
    <string name="log_register_user" translatable="false">Registering user with firebase</string>
    <string name="log_send_error" translatable="false">Error sending message (Id: %s) with error %s</string>
    <string name="log_sending_msg" translatable="false">Sending message to server</string>

    <string name="no_play_services">Nisht keyn Google Play Services iz gezen af zayer aparat</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="notifications_title">Onzogn</string>
    <string name="user_title">User</string>

    <!-- Notification Preferences -->
    <string name="override_dnd">Iberstoyern Do Not Disturb</string>
    <string name="override_summary_off">Onzogn vel nisht vayzn ven Do Not Disturb iz aktiv</string>
    <string name="override_summary_on">Onzogn vel vayzn ven Do Not Disturb iz aktiv</string>
    <string name="vibrate_preference">Tzitern ven aparat iz:</string>
    <string name="ring_preference">Klingen ven aparat iz:</string>
    <string name="silent">Shtil</string>
    <string name="vibrate">Tzitern</string>
    <string name="ring">Klingen</string>

    <!-- User Preferences -->
    <string name="display_name">Aroysvayz nomen</string>

    <!-- Preference Keys -->
    <string name="name_key" translatable="false">com.aracroproducts.attention.key.preferred_name</string>
    <string name="override_dnd_key" translatable="false">com.aracroproducts.attention.key.override_dnd</string>
    <string name="ring_preference_key" translatable="false">com.aracroproducts.attention.key.ring</string>
    <string name="vibrate_preference_key" translatable="false">com.aracroproducts.attention.key.vibrate</string>
</resources>
